# TokenZero

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
api/: main.py
api/routes/: completions.py  metrics.py
benchmarks/: run.py
benchmarks/query_sets/: complex.json  medium.json  simple.json
core/: classifier.py  classifier_factory.py  context_manager.py  llm_client.py  prometheus_metrics.py  router.py  settings.py
dashboard/: app.py
db/: queries.py  schema.py
grafana/dashboards/: smart-router.json
grafana/provisioning/dashboards/: dashboard.yml
tests/: test_benchmark_runner.py  test_classifier.py  test_completions.py  test_context_manager.py  test_llm_client.py  test_metrics_endpoint.py  test_metrics_queries.py  test_router.py  test_settings.py
