[tool.poetry]
name = "smart-router"
version = "0.1.0"
description = "Dynamic LLM routing API that optimizes cost and latency with complexity-aware model selection."
authors = ["TokenZero Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.111,<0.112"
uvicorn = { extras = ["standard"], version = ">=0.30,<0.31" }
httpx = ">=0.27,<0.28"
pydantic = ">=2.8,<3.0"
pydantic-settings = ">=2.3,<3.0"
aiosqlite = ">=0.20,<0.21"
streamlit = ">=1.36,<2.0"
prometheus-client = ">=0.20,<0.21"
transformers = ">=4.42,<5.0"
torch = ">=2.3,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"
pytest-asyncio = ">=0.23,<0.24"
pytest-benchmark = ">=4.0,<5.0"
ruff = ">=0.5,<0.6"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
